--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,12 @@
         "new": "cpp",
         "ratio": "cpp",
         "tuple": "cpp",
-        "string_view": "cpp"
+        "string_view": "cpp",
+        "deque": "cpp",
+        "unordered_map": "cpp",
+        "unordered_set": "cpp",
+        "hash_set": "cpp",
+        "typeindex": "c",
+        "typeinfo": "c"
     }
 }
