--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,44 +1,98 @@
 {
-    "editor.formatOnSave": true, //保存时自动格式化代码
-    // 根据打开文件的内容自动检测缩进，会覆盖默认缩进设置，相关设置： #editor.tabSize#和#editor.intertSpaces#
-    // 例如虽然下面设置的 tabSize 为 4，但是当前文件打开时是文件内容的 tabSize 为 2，所以依然会沿用 2，如果设置为 false，后续的 tabSize 则会使用 4
-    "editor.detectIndentation": false,
-    "editor.insertSpaces": true, //是否使用空格
-    "editor.tabSize": 4, // 空格或者制表符的大小
-    "editor.fontSize": 14, // 编辑器字体大小
-    // "editor.rulers": [120, 140], // 垂直标尺，会在指定列号处显示竖线
-    "editor.wordWrap": "wordWrapColumn", // 控制换行方式
-    "editor.wordWrapColumn": 200, // 控制换行的宽度
-    "files.associations": {
-        "vector": "cpp",
-        "*.tcc": "cpp",
-        "forward_list": "cpp",
-        "list": "cpp",
-        "initializer_list": "cpp",
-        "limits": "cpp",
-        "regex": "cpp",
-        "type_traits": "cpp",
-        "valarray": "cpp",
-        "iostream": "cpp",
-        "ostream": "cpp",
-        "functional": "cpp",
-        "future": "cpp",
-        "istream": "cpp",
-        "string": "cpp",
-        "random": "cpp",
-        "array": "cpp",
-        "bitset": "cpp",
-        "utility": "cpp",
-        "iosfwd": "cpp",
-        "new": "cpp",
-        "ratio": "cpp",
-        "tuple": "cpp",
-        "string_view": "cpp",
-        "deque": "cpp",
-        "unordered_map": "cpp",
-        "unordered_set": "cpp",
-        "hash_set": "cpp",
-        "typeindex": "c",
-        "typeinfo": "c"
-    }
+  "editor.formatOnSave": true,
+  "editor.detectIndentation": false,
+  "editor.insertSpaces": true,
+  "editor.tabSize": 4,
+  "editor.fontSize": 14,
+  "editor.wordWrap": "wordWrapColumn",
+  "editor.wordWrapColumn": 200,
+  "files.associations": {
+    "vector": "cpp",
+    "*.tcc": "cpp",
+    "forward_list": "cpp",
+    "list": "cpp",
+    "initializer_list": "cpp",
+    "limits": "cpp",
+    "regex": "cpp",
+    "type_traits": "cpp",
+    "valarray": "cpp",
+    "iostream": "cpp",
+    "ostream": "cpp",
+    "functional": "cpp",
+    "future": "cpp",
+    "istream": "cpp",
+    "string": "cpp",
+    "random": "cpp",
+    "array": "cpp",
+    "bitset": "cpp",
+    "utility": "cpp",
+    "iosfwd": "cpp",
+    "new": "cpp",
+    "ratio": "cpp",
+    "tuple": "cpp",
+    "string_view": "cpp",
+    "deque": "cpp",
+    "unordered_map": "cpp",
+    "unordered_set": "cpp",
+    "hash_set": "cpp",
+    "typeindex": "c",
+    "typeinfo": "c"
+  },
+  "C_Cpp_Runner.msvcBatchPath": "",
+  "C_Cpp_Runner.cCompilerPath": "gcc",
+  "C_Cpp_Runner.cppCompilerPath": "g++",
+  "C_Cpp_Runner.debuggerPath": "gdb",
+  "C_Cpp_Runner.cStandard": "",
+  "C_Cpp_Runner.cppStandard": "",
+  "C_Cpp_Runner.useMsvc": false,
+  "C_Cpp_Runner.warnings": [
+    "-Wall",
+    "-Wextra",
+    "-Wpedantic",
+    "-Wshadow",
+    "-Wformat=2",
+    "-Wcast-align",
+    "-Wconversion",
+    "-Wsign-conversion",
+    "-Wnull-dereference"
+  ],
+  "C_Cpp_Runner.msvcWarnings": [
+    "/W4",
+    "/permissive-",
+    "/w14242",
+    "/w14287",
+    "/w14296",
+    "/w14311",
+    "/w14826",
+    "/w44062",
+    "/w44242",
+    "/w14905",
+    "/w14906",
+    "/w14263",
+    "/w44265",
+    "/w14928"
+  ],
+  "C_Cpp_Runner.enableWarnings": true,
+  "C_Cpp_Runner.warningsAsError": false,
+  "C_Cpp_Runner.compilerArgs": [],
+  "C_Cpp_Runner.linkerArgs": [],
+  "C_Cpp_Runner.includePaths": [],
+  "C_Cpp_Runner.includeSearch": [
+    "*",
+    "**/*"
+  ],
+  "C_Cpp_Runner.excludeSearch": [
+    "**/build",
+    "**/build/**",
+    "**/.*",
+    "**/.*/**",
+    "**/.vscode",
+    "**/.vscode/**"
+  ],
+  "C_Cpp_Runner.useAddressSanitizer": false,
+  "C_Cpp_Runner.useUndefinedSanitizer": false,
+  "C_Cpp_Runner.useLeakSanitizer": false,
+  "C_Cpp_Runner.showCompilationTime": false,
+  "C_Cpp_Runner.useLinkTimeOptimization": false,
+  "C_Cpp_Runner.msvcSecureNoWarnings": false
 }
